force-app/main/default/objects/copado__Quality_Gate_Action__mdt/copado__Quality_Gate_Action__mdt.object-meta.xml
<CustomObject>
    <label>Quality Gate Action</label>
    <pluralLabel>Quality Gate Actions</pluralLabel>
</CustomObject>