force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Details__c.field-meta.xml
<CustomField>
    <fullName>copado__Details__c</fullName>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>