force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Execution_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution_Error_Message__c</fullName>
    <label>Execution Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>