force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Execution_Sequence_Icon__c.field-meta.xml
<CustomField>
    <fullName>copado__Execution_Sequence_Icon__c</fullName>
    <label>Execution Sequence Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>