force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Info_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Info_Message__c</fullName>
    <label>Info Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>