force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>copado__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>