force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Sequence__c.field-meta.xml
<CustomField>
    <fullName>copado__Sequence__c</fullName>
    <label>Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>