force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Test_Tool__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Tool__c</fullName>
    <label>Test Tool</label>
    <referenceTo>copado__TestTool__mdt</referenceTo>
    <relationshipLabel>Quality Gate Actions</relationshipLabel>
    <relationshipName>Quality_Gate_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>