force-app/main/default/objects/copado__Quality_Gate_Action__mdt/fields/copado__Tool_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Tool_Sequence_Status__c</fullName>
    <label>Tool Sequence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>